--- a/forallx-adl-backmatter.tex
+++ b/forallx-adl-backmatter.tex
@@ -11,7 +11,7 @@ P.D.\ Magnus would like to thank the people who made this project possible. Nota
 
 Tim Button would like to thank P.D.\ Magnus for his extraordinary act of generosity, in making \forallx\ available to everyone. Thanks also to Alfredo Manfredini Böhm, Sam Brain, Felicity Davies, Emily Dyson, Phoebe Hill, Richard Jennings, Justin Niven,  and Igor Stojanovic for noticing errata in earlier versions. \medskip
 
-Antony Eagle would like to thank P.D.\ Magnus and Tim Button for their work from which this text derives. He thanks Caitlin Bettess, Andrew Carter, Keith Dear, Jack Garland, Millie Lewis, Jon Opie, Matt Nestor, Jaime von Schwarzburg, and Mike Walmer for comments. % updated October 2018
+Antony Eagle would like to thank P.D.\ Magnus and Tim Button for their work from which this text derives. He thanks Caitlin Bettess, Andrew Carter, Keith Dear, Jack Garland, Millie Lewis, Yaoying Li, Jon Opie, Matt Nestor, Jaime von Schwarzburg, and Mike Walmer for comments. % updated October 2018
 
 \subsubsection*{About the Authors}
 
