--- a/forallx-adl-fol.tex
+++ b/forallx-adl-fol.tex
@@ -155,6 +155,35 @@ In permitting multiple domains, \FOL\ follows the lead of natural languages like
 	\item Quantifiers are supported by variables, which behave rather like pronouns in English.
 }
 
+\practiceproblems
+\problempart
+
+In each of the following sentences, identify the names and predicates. Comment on any difficulties.\begin{enumerate}
+	\item Kurt and Alonzo are logicians;
+	\item Silver is useful in film photography;
+	\item Mary's ring is silver;
+	\item Kurt and Alonzo lift a couch;
+	\item The biggest threat to life on earth is carbon dioxide.
+\end{enumerate}
+\problempart
+Make use of this symbolisation key to symbolise the following sentences into Quantifer, commenting on any difficulties:
+\begin{ekey}
+		\item[\text{domain}] cities and towns in South Australia
+		\item[a] Adelaide
+		\item[m] Mount Gambier
+		\item[T] \gap{1} is a town
+		\item[U] \gap{1} is ugly
+		\item[L] \gap{1} is large
+	\end{ekey}
+
+\begin{enumerate}
+	\item Adelaide is big and ugly.
+	\item Mount Gambier is not large.
+	\item If Mount Gambier is large, then Adelaide definitely is!
+	\item Mount Gambier is a large village.
+	\item Every city and town is ugly.
+\end{enumerate}
+
 \chapter{Sentences with One Quantifier}\label{s:MoreMonadic}
 We now have all of the pieces of \FOL. Symbolising many sentences of English will only be a matter of knowing the right way to combine predicates, names, quantifiers, and the truth-functional connectives. There is a knack to this, and there is no substitute for practice.
 
